# learn_vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
src/: .VulkanRenderer.cpp.swo  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanValidation.h  main.cpp
src/Shaders/: shader.vert  vert.spv
vkx/: CMakeLists.txt
vkx/include/vkx/: AutoDeletable.hpp  Create.hpp  Ext.hpp  Lifetime.hpp  Object.hpp  Resource.hpp  Tmp.hpp  TypeInfo.hpp  raii.hpp  tapi.hpp  util.hpp  vkx.hpp
vkx/src/: Create.cpp  Lifetime.cpp  raii.cpp  tapi.cpp  util.cpp
